@@ -1,3 +1,8 @@
+2005-07-21 08:39 Mike Park  <mike.park@nasa.gov>
+
+	* src/grid.c (gridWriteTecplotEquator) added to debug surface edge
+	splitting.
+
 2005-07-20 15:00 Mike Park  <mike.park@nasa.gov>
 
 	* src/gridinsert.c (gridAdaptLongShort) added to do all splits first
